--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -43,6 +43,11 @@ $squareSize: 40px;
     }
 }
 
+.me + .main-wrapper .board-container:nth-child(1) .board-wrapper,
+.enemy + .main-wrapper .board-container:nth-child(2) .board-wrapper {
+    border-color: green !important;
+}
+
 .main-wrapper {
     width: 100%;
     display: flex;
@@ -60,7 +65,8 @@ $squareSize: 40px;
     }
 
     .board-wrapper {
-        border: 1px solid $black15;
+        border: 14px solid $black15;
+        border-radius: 10px;
     }
 
     .board {
