--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,122 +1,5 @@
-html,
-body {
-    margin: 0;
-    padding: 0;
-}
-
-* {
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-}
-
-$black8: rgba(0, 0, 0, 0.08);
-$black15: rgba(0, 0, 0, 0.15);
-$black20: rgba(0, 0, 0, 0.2);
-$squareSize: 40px;
-
-.ship-statuses {
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-
-    .row {
-        padding: 2px 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .ship-image {
-        max-width: 70px;
-    }
-
-    .hit {
-        width: $squareSize;
-        height: $squareSize;
-        
-        &.s {
-            width: 12px;
-            height: 12px;
-        }
-    }
-}
-
-.me + .main-wrapper .board-container:nth-child(1) .board-wrapper,
-.enemy + .main-wrapper .board-container:nth-child(2) .board-wrapper {
-    border-color: green !important;
-}
-
-.main-wrapper {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    
-    .board-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-    }
-
-    .board-display {
-
-    }
-
-    .board-wrapper {
-        border: 14px solid $black15;
-        border-radius: 10px;
-    }
-
-    .board {
-        max-width: $squareSize * 10;
-        display: flex;
-        flex-wrap: wrap;
-
-        .row {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            &:first-child > .item {
-                border-top: none;
-            }
-        }
-
-        .item {
-            width: $squareSize;
-            height: $squareSize;
-            font-size: 12px;
-            border-right: 1px solid $black15;
-            border-top: 1px solid $black15;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-
-            &.red { background-color: red !important; };
-            &.blue { background-color: blue !important; };
-            &.green { background-color: green !important; };
-            &.yellow { background-color: yellow !important; };
-            &.black { background-color: black !important; };
-
-            &.hit {
-                background: url('../../static/HitSmall.png') no-repeat;
-                background-size: 80% 80%;
-                background-position: center;
-            }
-
-            &.miss {
-                background: url('../../static/MissSmall.png') no-repeat;
-                background-size: 80% 80%;
-                background-position: center;
-            }
-
-            &:nth-child(10n) {
-                border-right: none;
-            }
-        }
-    }
-}
+@import "./mixins";
+@import "./general";
+@import "./intro";
+@import "./modal_finish";
+@import "./game_loader";
