--- a/src/assets/_modal_finish.scss
+++ b/src/assets/_modal_finish.scss
@@ -9,6 +9,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.6);
+    z-index: 9999;
 
     .content {
         background: rgba(0,0,0,0.6);
